syntax = "proto2";

option cc_enable_arenas = true;
option optimize_for = LITE_RUNTIME;

package Molch.Protobuf;

message EncryptedBackup {
	required uint32 backup_version = 1;
	enum BackupType {
		FULL_BACKUP = 0;
		CONVERSATION_BACKUP = 1;
	}
	optional BackupType backup_type = 2;
	optional bytes encrypted_backup_nonce = 3;
	optional bytes encrypted_backup = 4;
}
