syntax = "proto2";
message PacketHeader {
	required uint32 current_protocol_version = 1;
	required uint32 highest_supported_protocol_version = 2;
	enum PacketType {
		PREKEY_MESSAGE = 0;
		NORMAL_MESSAGE = 1;
	}
	optional PacketType packet_type = 3 [default = NORMAL_MESSAGE];
	optional bytes header_nonce = 4;
	optional bytes message_nonce = 5;
	optional bytes public_identity_key = 16; //only prekey messages
	optional bytes public_ephemeral_key = 17; //only prekey messages
	optional bytes public_prekey = 18; //only prekey messages
}
